[package]
name = "geo-pansim-rust"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
js-sys = "0.3.37"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen-futures = "0.4.10"

actix = { git = "file:///home/ubuntu/actix/"}
actix-web = "2.0.0"
actix-rt = "1.1.0"
futures-util = "0.3"

